<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arduino_arm_hardware</name>
  <version>0.0.1</version>
  <description>Custom ros2_control hardware interface for Arduino Mega RAMPS 1.4</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend> <!-- For pyserial -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <hardware_interface plugin="${prefix}/share/${name}/arduino_arm_hardware_plugins.xml"/>
  </export>
</package>
